test.css
/* Hide scrollbar for Chrome, Safari and Opera */
/* width */
::-webkit-scrollbar {
    height: 12px;
    -webkit-overflow-scrolling: touch;
    /*display:none;*/
}
/* Track */
::-webkit-scrollbar-track {
    border-radius: 10px;
}
/* Handle */
::-webkit-scrollbar-thumb:horizontal {
    background: #83fe5b;
    border-radius: 20px;
}
::-webkit-scrollbar-thumb:vertical {
    background: #d5d5d5;
    border-radius: 20px;
}
/* Handle on hover */
::-webkit-scrollbar-thumb:horizontal:hover {
    background: #53e424;
}
::-webkit-scrollbar-thumb:vertical:hover {
    background: gray;
}
/* Hide scrollbar for IE, Edge and Firefox */
.scrollbar {
    -ms-overflow-style: none; /* IE and Edge */
}


#google-play-button {
    /*button:*/
    background: transparent;
    border-style: solid;
    border-width: 4px;
    border-color: transparent;
    cursor: pointer;
    margin: 1.6rem 0 auto auto;
    /*dsfdf*/
    padding: 0.8rem 1.4rem;
    vertical-align: middle;
}
#google-play-button-text {
    /*button:*/
    background: transparent;
    border-style: solid;
    border-width: 4px;
    border-color: black;
    padding: 0.8rem 1.4rem;
    /*font adjustments:*/
    text-align: center;
    text-decoration: none;
    color: #000000 !important;
    font-size: 1rem;
    font-family: Roboto;
    text-transform: uppercase;
    vertical-align: middle;
}
#google-play-button-text:hover {
    background-color: #5fc3f5 !important;
}


body {
    font-family: Arial;
    margin: 0px;
}

#header {
    background-image: none;
    background: #e0e5eb;
    padding: 0px;
}

.white {
    color: #111111;
    background-color: #ffffff;
}

.fullwidth {
    width: 100%;
}

.center-text {
    text-align: center;
}

.no-padding {
    padding: 0px;
}

.blob-skins {
    height: 218px;
    width: 218px;
    padding: 10px;
    border-radius: 20%;
}

.layout-row {
    flex-direction: row;
    flex-wrap: wrap;
}

.bannertable {
    height: 100%;
    padding-left: 10%;
    padding-right: 10%;
}

#top-page-cover {
    background-image: url("images/bckgrnd03.png");
    object-fit: none;
}
.th-text-a1 {
    text-align: left;
    font-size: 32px;
    margin: 0 0 0 1.6rem;
}
.true-center {
    text-align: center;
    vertical-align: middle;
    margin: 0 auto;
}
.th-text {
    text-align: center;
    font-size: 32px;
    margin: 0px;
    text-decoration: none;
}

.text-color-black {
    background-color: transparent;
    color: #000000 !important;
}
.text-color-socials {
    background-color: transparent;
    color: lightgray;
}

.footer-title {
    margin: auto;
    text-align: center;
    text-decoration: none;
    color: #d4d4d4;
    font-size: 1.4rem;
    font-family: Arial, sans-serif;
    font-weight: normal;
    letter-spacing: 1px;
}
.footer-text {
    text-align: center;
    text-decoration: none;
    color: #d4d4d4;
    font-size: 1rem;
    font-family: 'Open Sans',sans-serif;
    font-weight: normal;
}
.footer-link:hover {
    color: #5fc3f5;
}

/*on mobile*/
@media (max-width: 767px) {
    .hidden-mobile {
        display: none;
    }
    .bannericon {
        height: 46px;
        width: 46px;
        margin: 0 4px;
        border-radius: 8px;
        cursor: pointer;
    }
    .bannericona1 {
        height: 64px;
        width: 64px;
        padding: 6px 0;
        border-radius: 10px;
    }
    .text-bubblegum {
        font-family: BubblegumSans;
        color: #83fe5b;
        font-size: 3rem;
        text-align: center;
        margin: 0;
        padding-top: 64px;
        letter-spacing: 0.6rem;
    }
}

/*on desktop*/
@media (min-width: 767px) {
    .hidden-desktop {
        display: none;
    }
    .bannericon {
        height: 64px;
        width: 64px;
        margin: 0 6px;
        border-radius: 12px;
        cursor: pointer;
    }
    .bannericona1 {
        height: 84px;
        width: 84px;
        padding: 8px 0;
        border-radius: 12px;
    }
    .text-bubblegum {
        font-family: BubblegumSans;
        color: #83fe5b;
        font-size: 6rem;
        text-align: center;
        margin: 0;
        padding-top: 64px;
        letter-spacing: 0.6rem;
    }
}



@font-face {
    font-family: BubblegumSans;
    font-style: normal;
    font-weight: normal;
    src: url(fonts/BubblegumSans-Regular.otf);
    src: url(fonts/BubblegumSans-Regular.ttf);
}
@font-face {
    font-family: RobotoMedium;
    font-style: normal;
    font-weight: normal;
    src: url(fonts/Roboto-Medium.ttf);
}
@font-face {
    font-family: RobotoLight;
    font-style: normal;
    font-weight: normal;
    src: url(fonts/Roboto-Light.ttf);
}
@font-face {
    font-family: RobotoThin;
    font-style: normal;
    font-weight: normal;
    src: url(fonts/Roboto-Thin.ttf);
}
@font-face {
    font-family: Roboto;
    font-style: normal;
    font-weight: bold;
    src: url(fonts/Roboto-Regular.ttf);
}
@font-face {
    font-family: Roboto;
    font-style: normal;
    font-weight: bold;
    src: url(fonts/Roboto-Bold.ttf);
}

@import url(//fonts.google.com/specimen/Bubblegum+Sans);
@import url(//fonts.google.com/specimen/Roboto);

